--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,14 @@ __pycache__/
 .env.test.local
 .env.production.local
 
-datasets/
 *.wbproj
+
+*.csv
+*.h5
+*.keras
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.bmp
+*.tiff
