--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 numpy==1.24.3
-opencv_python_headless==4.11.0.86
+opencv-python-headless==4.10.0
 tensorflow==2.13.1
 pandas==2.0.3
+scikit-learn==1.3.2
